Start work on html for images lightbox.

--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@
               <ul class="featured-carousel__list">
                 <li>
                   <img
+                    decoding="async"
                     src="images/image-product-1.jpg"
                     alt="Tan and white leather sneakers with a white rubber sole and white shoelaces"
                     class="featured-carousel__image"
@@ -284,6 +285,7 @@
                 </li>
                 <li>
                   <img
+                    decoding="async"
                     src="images/image-product-2.jpg"
                     alt="Close up of back of sneakers displays signature orange leather heel accent"
                     class="featured-carousel__image"
@@ -291,6 +293,7 @@
                 </li>
                 <li>
                   <img
+                    decoding="async"
                     src="images/image-product-3.jpg"
                     alt="Angled view of front of shoe shows how tan leather wraps right up to the white shoelaces"
                     class="featured-carousel__image"
@@ -298,12 +301,58 @@
                 </li>
                 <li>
                   <img
+                    decoding="async"
                     src="images/image-product-4.jpg"
                     alt="View from side shows detailed white stiching along the shoe's slip-resistant, rubber sole"
                     class="featured-carousel__image"
                   />
                 </li>
               </ul>
+            </div>
+          </div>
+          <div class="featured-imagebox">
+            <div class="featured-imagebox__image">
+              <img
+                decoding="async"
+                class="featured-imagebox__image--main"
+                src="images/image-product-1.jpg"
+                alt="Tan and white leather sneakers with a white rubber sole and white shoelaces"
+                data-image="image-product-1"
+              />
+            </div>
+            <div class="featured-imagebox__thumbnails">
+              <div class="thumbnail-btn" role="button" tabindex="0">
+                <img
+                  decoding="async"
+                  src="images/image-product-1-thumbnail.jpg"
+                  alt="Tan and white leather sneakers with a white rubber sole and white shoelaces"
+                  data-image="thumbnail-1"
+                />
+              </div>
+              <div class="thumbnail-btn" role="button" tabindex="0">
+                <img
+                  decoding="async"
+                  src="images/image-product-2-thumbnail.jpg"
+                  alt="Close up of back of sneakers displays signature orange leather heel accent"
+                  data-image="thumbnail-2"
+                />
+              </div>
+              <div class="thumbnail-btn" role="button" tabindex="0">
+                <img
+                  decoding="async"
+                  src="images/image-product-3-thumbnail.jpg"
+                  alt="Angled view of front of shoe shows how tan leather wraps right up to the white shoelaces"
+                  data-image="thumbnail-3"
+                />
+              </div>
+              <div class="thumbnail-btn" role="button" tabindex="0">
+                <img
+                  decoding="async"
+                  src="images/image-product-4-thumbnail.jpg"
+                  alt="View from side shows detailed white stiching along the shoe's slip-resistant, rubber sole"
+                  data-image="thumbnail-4"
+                />
+              </div>
             </div>
           </div>
           <div class="featured-details">
